<resources>
    <string name="app_name">Simple remote controller</string>
    <string name="developer_email">mkandrodev@gmail.com</string>

    <string name="current_temperature_label">Aktualna temperatura:</string>
    <string name="current_humidity_label">Aktualna wilgotność:</string>

    <string name="actual_weather">Aktualne warunki</string>
    <string name="history_weather">Historyczne warunki</string>
    <string name="switch_instant">Włącznik natychmiastowy</string>
    <string name="switch_adjustable">Włącznik nastawny</string>

    <string name="start_furnace_label">Włącz piec</string>
    <string name="start_airing_label">Włącz wietrzenie</string>

    <string name="start_furnace_when_label">Włącz piec gdy:</string>
    <string name="start_airing_when_label">Włącz wietrzenie gdy:</string>
    <string name="set_weather_label">Set weather</string>

    <string name="celsius_degree">\u2103</string>

    <string name="settings_title">Ustawienia</string>

    <string name="set_url_label">Podaj URL:</string>
    <string name="set_url_button_label">Zapisz URL</string>

    <string name="historical_date">Data</string>
    <string name="historical_temperature">Temperatura</string>
    <string name="historical_humidity">Wilgotność</string>

</resources>
